--- a/html/member/find_pw_reset.html
+++ b/html/member/find_pw_reset.html
@@ -7,7 +7,7 @@
 	<meta name="Keywords" content="">
 	<meta name="Description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<title>로그인 | 위플즈</title>
+	<title>비밀번호 재설정 | 위플즈</title>
 
 	<script src="../static/js/jquery-3.6.0.min.js"></script>
 	<script src="../static/js/jquery-ui.min.js"></script>
@@ -117,76 +117,35 @@
 		</div>
 	</header><!-- // header -->
 	
-	<div id="wrap" class="login">
+	<div id="wrap" class="login reset">
 		<div class="contents-wrap">
-			<h2 class="heading-wrap-02">로그인</h2>
+			<h2 class="heading-wrap-02">비밀번호 재설정</h2>
 			<div class="contents" id="contents">
-				<div class="contents-head tab-menu tab--active">
-					<ul>
-						<li class="selected"><a href="#personalMember">개인회원 (프리랜서)</a></li>
-						<li><a href="#corporateMember">기업회원</a></li>
-					</ul>
+				<div class="contents-head">
+					<p><span class="txt-rendering">아이디</span><b class="txt-rendering">Pcntest1</b></p>
 				</div><!-- // contents-head -->
-				<div class="contents-body tabCts-wrap">
+				<div class="contents-body">
 					<form action="" method="post">
-						<!-- 개인회원 -->
-						<div class="tabCts" id="personalMember">
+						<div>
 							<div class="form-list">
 								<dl class="table">
-									<dt><strong>아이디</strong></dt>
+									<dt><strong>새 비밀번호</strong></dt>
 									<dd>
 										<div class="text-wrap">
-											<input type="text" class="txt-rendering" id="" value="" placeholder="아이디를 입력하세요" title="아이디 - 아이디를 입력하세요">
+											<input type="text" class="txt-rendering" id="" value="" placeholder="9~12자 특수문자, 숫자포함 등록" title="새 비밀번호 입력 - 9~12자 특수문자, 숫자포함 등록">
 										</div>
 									</dd>
 								</dl>
 								<dl class="table">
-									<dt><strong>비밀번호</strong></dt>
+									<dt><strong>새 비밀번호 확인</strong></dt>
 									<dd>
 										<div class="text-wrap">
-											<input type="text" class="txt-rendering" id="" value="" placeholder="9~12자 특수문자, 숫자포함 등록" title="비밀번호 입력 - 9~12자 특수문자, 숫자포함 등록">
+											<input type="text" class="txt-rendering" id="" value="" placeholder="비밀번호 재입력" title="새 비밀번호 재입력 - 비밀번호 재입력">
 										</div>
 									</dd>
 								</dl>
 								<div class="btn-wrap align-r">
-									<button type="submit" class="btn-type-wide purple"><em class="txt-rendering ft-md2">Login</em></button>
-								</div>
-								<div>
-									<ul>
-										<li><a class="txt-rendering" href="#">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="#">비밀번호 변경</a></li>
-										<li><a class="txt-rendering" href="#">개인회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering" href="#">기업회원 가입</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-
-						<!-- 기업회원 -->
-						<div class="tabCts" id="corporateMember">
-							<div class="form-list">
-								<dl class="table">
-									<dt><strong>아이디</strong></dt>
-									<dd>
-										<div class="text-wrap">
-											<input type="text" class="txt-rendering" id="" value="" placeholder="아이디를 입력하세요" title="아이디 - 아이디를 입력하세요">
-										</div>
-									</dd>
-								</dl>
-								<dl class="table">
-									<dt><strong>비밀번호</strong></dt>
-									<dd>
-										<div class="text-wrap">
-											<input type="text" class="txt-rendering" id="" value="" placeholder="9~12자 특수문자, 숫자포함 등록" title="비밀번호 입력 - 9~12자 특수문자, 숫자포함 등록">
-										</div>
-									</dd>
-								</dl>
-								<div class="btn-wrap align-r">
-									<button type="submit" class="btn-type-wide purple"><em class="txt-rendering ft-md2">Login</em></button>
-								</div>
-								<div>
-									<ul>
-										<li><a class="txt-rendering" href="#">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="#">비밀번호 변경</a></li>
-										<li><a class="txt-rendering" href="#">기업회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering" href="#">개인회원 가입</a></li>
-									</ul>
+									<button type="submit" class="btn-type-wide purple"><em class="txt-rendering ft-md2">비밀번호 변경하기</em></button>
 								</div>
 							</div>
 						</div>
