위플즈 퍼블수정 3차

--- a/guide/file_list.html
+++ b/guide/file_list.html
@@ -44,9 +44,29 @@
 								<!-- member -->
 								<tr>
 									<td class="count"></td>
-									<td rowspan="7">Member (7p)</td>
+									<td rowspan="11">Member (11p)</td>
 									<td colspan="2">로그인</td>
 									<td><a href="../html/member/signin.html" target="_blank">/member/signin.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">아이디 찾기</td>
+									<td><a href="../html/member/find_id.html" target="_blank">/member/find_id.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">아이디 찾기 결과</td>
+									<td><a href="../html/member/find_id_result.html" target="_blank">/member/find_id_result.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">비밀번호 찾기</td>
+									<td><a href="../html/member/find_pw.html" target="_blank">/member/find_pw.html</a></td>
+								</tr>
+								<tr>
+									<td class="count"></td>
+									<td colspan="2">비밀번호 재설정</td>
+									<td><a href="../html/member/pw_reset.html" target="_blank">/member/pw_reset.html</a></td>
 								</tr>
 								<tr>
 									<td class="count"></td>
@@ -85,7 +105,7 @@
 								<!-- client -->
 								<tr>
 									<td class="count"></td>
-									<td rowspan="4">Client (3p)</td>
+									<td rowspan="4">Client (4p)</td>
 									<td colspan="2">기업 회원가입</td>
 									<td><a href="../html/client/signup.html" target="_blank">/client/signup.html</a></td>
 								</tr>
