--- a/html/community/faq.html
+++ b/html/community/faq.html
@@ -161,7 +161,7 @@
 				</div><!-- // contents-head -->
 
 				<div class="contents-body">
-					<div class="faq-list dropDown2">
+					<div class="faq-list dropDown2 toggle">
 						<dl>
 							<dt><a href="javascript:void(0);"><strong>1년이 경과되지 않으면 퇴직금을 지급받을 수 없나요?</strong></a></dt>
 							<dd>
