--- a/html/community/inquiry.html
+++ b/html/community/inquiry.html
@@ -173,60 +173,104 @@
 				</div><!-- // contents-head -->
 
 				<div class="contents-body">
-					<div class="table-style02">
-						<table>
-							<caption>나의 1:1문의</caption>
-							<colgroup>
-								<col style="width:auto;"/>
-								<col style="width:10%;"/>
-								<col style="width:14%;"/>
-							</colgroup>
-							<thead class="hidden-txt">
-								<tr>
-									<th scope="col">문의내용</th>
-									<th scope="col">회원아이디</th>
-									<th scope="col">게시일</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<td class="align-l">
-										<em class="txt-color-purple type">[교육신청]</em><br class="mob-only" />
-										<b><a href="#">경력을 업데이트 하고자 합니다</a></b><br class="mob-only" />
-										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
-									</td>
-									<td><span>songc</span></td>
-									<td><span>2021-12-06</span></td>
-								</tr>
+					<div class="inquiry-list dropDown2">
+						<ul>
+							<li>
+								<!-- 문의내용 -->
+								<dl>
+									<dt>
+										<span class="summary">
+											<em class="txt-color-purple type txt-rendering">[교육신청]</em><br class="mob-only" />
+											<a href="javascript:void(0);"><b class="txt-rendering">경력을 업데이트 하고자 합니다</b></a>
+										</span>
+										<span class="author txt-rendering">songc</span>
+										<span class="date txt-rendering">2021-12-06</span>
+									</dt>
+									<dd>
+										<p class="txt-rendering">
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+										</p>
+										<button class="btn-fold" type="button"><em class="hidden-txt">문의내용 닫기</em></button>
+									</dd>
+								</dl>
+
 								<!-- 관리자 답글 -->
-								<tr class="reply">
-									<td class="align-l">
-										<b class="txt-color-purple">위플즈를 이용해 주셔서 감사합니다</b><br class="mob-only" />
-										<span class="mob-only"><em>관리자</em><em>2021-12-06</em></span>
-									</td>
-									<td><span>관리자</span></td>
-									<td><span>2021-12-06</span></td>
-								</tr>
-								<tr>
-									<td class="align-l">
-										<em class="txt-color-purple type">[퇴직금 문의]</em><br class="mob-only" />
-										<b><a href="#">위플즈에 가입 후 퇴직금을 받고 싶은데 어떻게 해야 하나요?</a></b><br class="mob-only" />
-										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
-									</td>
-									<td><span>songc</span></td>
-									<td><span>2021-12-06</span></td>
-								</tr>
-								<tr>
-									<td class="align-l">
-										<em class="txt-color-purple type">[퇴직금 문의]</em><br class="mob-only" />
-										<b><a href="#">위플즈에 가입 후 퇴직금을 받고 싶은데 어떻게 해야 하나요?</a></b><br class="mob-only" />
-										<span class="mob-only"><em>songc</em><em>2021-12-06</em></span>
-									</td>
-									<td><span>songc</span></td>
-									<td><span>2021-12-06</span></td>
-								</tr>
-							</tbody>
-						</table>
+								<dl class="reply">
+									<dt>
+										<span class="summary">
+											<a href="javascript:void(0);"><b class="txt-color-purple">위플즈를 이용해 주셔서 감사합니다</b></a>
+										</span>
+										<span class="author txt-rendering">관리자</span>
+										<span class="date txt-rendering">2021-12-06</span>
+									</dt>
+									<dd>
+										<p class="txt-rendering">
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+										</p>
+										<button class="btn-fold" type="button"><em class="hidden-txt">답변내용 닫기</em></button>
+									</dd>
+								</dl>
+							</li>
+
+							<li>
+								<!-- 문의내용 -->
+								<dl>
+									<dt>
+										<span class="summary">
+											<em class="txt-color-purple type txt-rendering">[교육신청]</em><br class="mob-only" />
+											<a href="javascript:void(0);"><b class="txt-rendering">경력을 업데이트 하고자 합니다</b></a>
+										</span>
+										<span class="author txt-rendering">songc</span>
+										<span class="date txt-rendering">2021-12-06</span>
+									</dt>
+									<dd>
+										<p class="txt-rendering">
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+											문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다. 문의 내용이 들어갑니다.
+										</p>
+										<button class="btn-fold" type="button"><em class="hidden-txt">문의내용 닫기</em></button>
+									</dd>
+								</dl>
+
+								<!-- 관리자 답글 -->
+								<dl class="reply">
+									<dt>
+										<span class="summary">
+											<a href="javascript:void(0);"><b class="txt-color-purple">위플즈를 이용해 주셔서 감사합니다</b></a>
+										</span>
+										<span class="author txt-rendering">관리자</span>
+										<span class="date txt-rendering">2021-12-06</span>
+									</dt>
+									<dd>
+										<p class="txt-rendering">
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+											답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다. 답변 내용이 들어갑니다.
+										</p>
+										<button class="btn-fold" type="button"><em class="hidden-txt">답변내용 닫기</em></button>
+									</dd>
+								</dl>
+							</li>
+						</ul>
 					</div>
 					<div class="paging pc-only">
 						<a href="#" class="first"><span>첫 페이지</span></a>
