--- a/html/index.html
+++ b/html/index.html
@@ -276,7 +276,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -323,7 +323,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -373,7 +373,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -421,7 +421,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -466,7 +466,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -513,7 +513,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -563,7 +563,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
@@ -611,7 +611,7 @@
 										</div>
 										<div class="btn-wrap col-lg-2">
 											<button class="btn-type purple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">상세보기</em></button>
-											<button class="btn-type darkPurple" onclick="javascript:location.href='project/detail.html'"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
+											<button class="btn-type darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering ft-md">즉시 지원하기</em></button>
 										</div>
 									</article>
 								</li>
