--- a/html/member/find_id_result.html
+++ b/html/member/find_id_result.html
@@ -128,17 +128,17 @@
 						</p>
 						<ul>
 							<li>
-								<div class="chk-wrap">
+								<div class="radio-wrap">
 									<span>
-										<input id="member_id_01" type="checkbox">
+										<input id="member_id_01" name="memberId" type="radio">
 										<label for="member_id_01">&nbsp;&nbsp;<b class="txt-rendering">Pcntest1</b>&nbsp;<em class="txt-rendering txt-color-gray">(프리랜서 &#47; 가입:2011.04.18)</em></label>
 									</span>
 								</div>
 							</li>
 							<li>
-								<div class="chk-wrap">
+								<div class="radio-wrap">
 									<span>
-										<input id="member_id_02" type="checkbox">
+										<input id="member_id_02" name="memberId" type="radio">
 										<label for="member_id_02">&nbsp;&nbsp;<b class="txt-rendering">Pcntest2</b>&nbsp;<em class="txt-rendering txt-color-gray">(기업회원 &#47; 가입:2011.04.18)</em></label>
 									</span>
 								</div>
@@ -147,7 +147,7 @@
 					</div>
 					<div class="btn-wrap align-c col-mid-2">
 						<button type="submit" class="btn-type-mid purple"><em class="txt-rendering ft-md2">로그인 하기</em></button>
-						<button type="button" class="btn-type-mid bd-blk"><em class="txt-rendering ft-md2">비밀번호 찾기</em></button>
+						<button type="button" class="btn-type-mid bd-blk" onclick=javascript:location.href="find_pw.html"><em class="txt-rendering ft-md2">비밀번호 찾기</em></button>
 					</div>
 				</div><!-- // contents-body -->
 			</div><!-- // contents -->
