--- a/html/member/find_pw.html
+++ b/html/member/find_pw.html
@@ -129,7 +129,7 @@
 								<div class="text-wrap">
 									<input type="text" class="txt-rendering" id="" value="" placeholder="아이디를 입력하세요" title="아이디 - 아이디를 입력하세요">
 								</div>
-								<p><em class="txt-rendering txt-color-gray">아이디가 기억나지 않으시나요?</em><a class="txt-rendering" href="#">ID 찾기</a></p>
+								<p><em class="txt-rendering txt-color-gray">아이디가 기억나지 않으시나요?</em><a class="txt-rendering" href="find_id.html">ID 찾기</a></p>
 							</dd>
 						</dl>
 					</div>	
