--- a/html/member/signin.html
+++ b/html/member/signin.html
@@ -123,8 +123,8 @@
 			<div class="contents" id="contents">
 				<div class="contents-head tab-menu tab--active">
 					<ul>
-						<li class="selected"><a href="#personalMember">개인회원 (프리랜서)</a></li>
-						<li><a href="#corporateMember">기업회원</a></li>
+						<li class="selected"><a href="javascript:void(0);" data-tab-id="personalMember">개인회원 (프리랜서)</a></li>
+						<li><a href="javascript:void(0);" data-tab-id="corporateMember">기업회원</a></li>
 					</ul>
 				</div><!-- // contents-head -->
 				<div class="contents-body tabCts-wrap">
@@ -153,8 +153,8 @@
 								</div>
 								<div>
 									<ul>
-										<li><a class="txt-rendering" href="#">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="#">비밀번호 변경</a></li>
-										<li><a class="txt-rendering" href="#">개인회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering" href="#">기업회원 가입</a></li>
+										<li><a class="txt-rendering" href="find_id.html">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="find_pw.html">비밀번호 변경</a></li>
+										<li><a class="txt-rendering change-tab" href="#personalMember">개인회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering change-tab" href="#corporateMember">기업회원 가입</a></li>
 									</ul>
 								</div>
 							</div>
@@ -184,8 +184,8 @@
 								</div>
 								<div>
 									<ul>
-										<li><a class="txt-rendering" href="#">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="#">비밀번호 변경</a></li>
-										<li><a class="txt-rendering" href="#">기업회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering" href="#">개인회원 가입</a></li>
+										<li><a class="txt-rendering" href="find_id.html">ID 찾기</a><span class="txt-rendering">또는</span><a class="txt-rendering" href="find_pw.html">비밀번호 변경</a></li>
+										<li><a class="txt-rendering change-tab" href="#corporateMember">기업회원 가입</a><span class="txt-rendering">|</span><a class="txt-rendering change-tab" href="#personalMember">개인회원 가입</a></li>
 									</ul>
 								</div>
 							</div>
