--- a/html/member/wish_list.html
+++ b/html/member/wish_list.html
@@ -168,7 +168,7 @@
 							<div class="btn-wrap  clear">
 								<button type="button" class="btn-type-icon2 mid wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 							</div>
 						</div>
 
@@ -214,7 +214,7 @@
 							<div class="btn-wrap clear">
 								<button type="button" class="btn-type-icon2 mid wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 							</div>
 						</div>
 
@@ -259,7 +259,7 @@
 							<div class="btn-wrap clear">
 								<button type="button" class="btn-type-icon2 mid wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 							</div>
 						</div>
 
@@ -302,7 +302,7 @@
 							<div class="btn-wrap clear">
 								<button type="button" class="btn-type-icon2 mid wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 							</div>
 						</div>
 
@@ -345,7 +345,7 @@
 							<div class="btn-wrap clear">
 								<button type="button" class="btn-type-icon2 mid wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 							</div>
 						</div>
 					</div><!-- // project-info -->
