--- a/html/project/search.html
+++ b/html/project/search.html
@@ -424,7 +424,7 @@
 							</div>
 							<div class="btn-wrap align-l col-mid-3-2">
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 								<button type="button" class="btn-type-icon2 xs wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 							</div>
 						</div>
@@ -470,7 +470,7 @@
 							</div>
 							<div class="btn-wrap align-l col-mid-3-2">
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 								<button type="button" class="btn-type-icon2 xs wish color-white"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 							</div>
 						</div>
@@ -515,7 +515,7 @@
 							</div>
 							<div class="btn-wrap align-l col-mid-3-2">
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 								<button type="button" class="btn-type-icon2 xs wish color-white"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 							</div>
 						</div>
@@ -558,7 +558,7 @@
 							</div>
 							<div class="btn-wrap align-l col-mid-3-2">
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 								<button type="button" class="btn-type-icon2 xs wish color-white"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 							</div>
 						</div>
@@ -601,7 +601,7 @@
 							</div>
 							<div class="btn-wrap align-l col-mid-3-2">
 								<button type="button" class="btn-type-sm purple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">상세보기</em></button>
-								<button type="button" class="btn-type-sm darkPurple" onclick="javascript:location.href='../project/detail.html'"><em class="txt-rendering">즉시지원</em></button>
+								<button type="button" class="btn-type-sm darkPurple active-modal" data-modal-name="immediatelyApply"><em class="txt-rendering">즉시지원</em></button>
 								<button type="button" class="btn-type-icon2 xs wish color-white selected"><em class="txt-rendering hidden-txt">관심 프로젝트 등록</em></button>
 							</div>
 						</div>
