--- a/html/member/find_id_result.html
+++ b/html/member/find_id_result.html
@@ -131,7 +131,7 @@
 								<div class="radio-wrap">
 									<span>
 										<input id="member_id_01" name="memberId" type="radio">
-										<label for="member_id_01">&nbsp;&nbsp;<b class="txt-rendering">Pcntest1</b>&nbsp;<em class="txt-rendering txt-color-gray">(프리랜서 &#47; 가입:2011.04.18)</em></label>
+										<label for="member_id_01"><b class="txt-rendering">Pcntest1</b>&nbsp;<em class="txt-rendering txt-color-gray">(프리랜서 &#47; 가입:2011.04.18)</em></label>
 									</span>
 								</div>
 							</li>
@@ -139,7 +139,7 @@
 								<div class="radio-wrap">
 									<span>
 										<input id="member_id_02" name="memberId" type="radio">
-										<label for="member_id_02">&nbsp;&nbsp;<b class="txt-rendering">Pcntest2</b>&nbsp;<em class="txt-rendering txt-color-gray">(기업회원 &#47; 가입:2011.04.18)</em></label>
+										<label for="member_id_02"><b class="txt-rendering">Pcntest2</b>&nbsp;<em class="txt-rendering txt-color-gray">(기업회원 &#47; 가입:2011.04.18)</em></label>
 									</span>
 								</div>
 							</li>
