위플즈 퍼블수정 4차

--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@
 				<div class="txt-rotateX">
 					<strong>Weple's</strong><span>wepeople's</span>
 				</div>
-				<div class="inner-wrap presentation animate animation--start fadeInUp">
+				<div class="inner-wrap presentation animate animation--start fadeIn active-none">
 					<div class="inner-cts">
 						<div class="swiper-wrapper">
 							<dl class="swiper-slide">
